some what done. need more work

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -23,6 +23,16 @@ position: absolute;
 
 }
 
+table {
+	border-collapse: collapse;
+}
+tr {
+	border: 1px solid #dfdfdf;
+}
+th, td {
+	padding: 2px 5px 2px 5px;
+}
+
 .pagetitle {
 	color: #3f51b5;
 	font-family: "DM Sans", sans-serif;
